--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,14 @@
 * {
     box-sizing: border-box;
-    font-family: Helvetica;
+    font-family: Roboto;
     color: #424748;
+  }
+
+  h3 {
+    font-family: Seaweed Script;
+    font-size: 64px;
+    font-weight: 100;
+    margin-bottom: 0px;
   }
   
   body {
@@ -16,7 +23,7 @@
   
   body > nav {
     grid-area: nav;
-    background-color: whitesmoke;
+    background-color:whitesmoke;
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -24,6 +31,8 @@
   }
   
   nav > img {
+    width: 100px;
+    object-fit: contain;
     margin-right: auto;
   }
   
@@ -32,7 +41,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(186, 85, 221);
+    background-color: rgb(236, 232, 236);
     padding: 20px;
     overflow-y: scroll;
   }
@@ -40,9 +49,21 @@
   body > main h1:first-child {
     margin-bottom: 50px;
   }
-  
+
+  .about {
+    display: block;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 550px;
+    height: 400px;
+    border: 10px solid #A1F1FF;
+    border-radius: 4px;
+    padding: 5px;
+  }
+
   nav > a {
-    margin: 20px;
+    margin: 10px;
     text-decoration: none;
     padding: 10px;
     border-radius: 5px;
