adds suggest a resource functionality

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,10 +12,10 @@
 </head>
 <body>
   <nav>
-    <img src="/images/mana.png">
-    <a href="/infos/new" <%- name === 'About' ? 'class="active"' : '' %>>About</a>
+    <a href="/resources/info" <%- name === 'About' ? 'class="active"' : '' %>>About</a>
     <a href="/resources" <%- name === 'Find Resources' ? 'class="active"' : '' %>>Find A Resource</a>
     <a href="/resources/new" <%- name === 'Suggest A Resource' ? 'class="active"' : '' %>>Suggest A Resource</a> 
+    <a href="/resources/new"><img alt="Mana" src="/images/mana.png" width="100"></a>
   </nav>
   <main>
     
