--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -62,6 +62,18 @@
     padding: 5px;
   }
 
+  .kids {
+    display: block;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 1200px;
+    height: 350px;
+    border: 10px solid #A1F1FF;
+    border-radius: 4px;
+    padding: 5px;
+  }
+
   nav > a {
     margin: 10px;
     text-decoration: none;
