--- a/views/resources/index.ejs
+++ b/views/resources/index.ejs
@@ -2,8 +2,9 @@
 <table id="list">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Organization</th>
       <th>Website</th>
+      <th>Practioner</th>
       <th></th>
     </tr>
   </thead>
@@ -13,7 +14,6 @@
         <td><%= r.Organization %></td>
         <td><%= r.Website %></td>
         <td><%= r.Practioner %></td>
-        <td><%= r.Website %></td>
         <td><a href="/resources/<%= r._id %>">DETAILS</a></td>
       </tr>
       <% }); %>
