--- a/views/resources/index.ejs
+++ b/views/resources/index.ejs
@@ -1,4 +1,9 @@
 <%- include('../partials/header') %>
+
+<img src = "/images/home.png" alt="superhero kids">
+<h1>Resource Guide</h1>
+
+
 <table id="list">
   <thead>
     <tr>
@@ -19,5 +24,7 @@
       <% }); %>
     </tbody>
   </table>
+<br><br><br>
+  <h3><a href="/resources/new">Are We Missing Something? Let Us Know!</a></h3>
   
 <%- include('../partials/footer') %>
