--- a/views/resources/new.ejs
+++ b/views/resources/new.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header') %>
 
-<img id="kids" src = "/images/banner.png" margin-bottom=100px>
+<img id="kids" src = "/images/banner.png">
 <h3>Autism Resource Submission Form</h3>
 <br><br>
 <form id="new-form" action="/resources" method="POST">
