--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,13 @@
     color: #424748;
   }
 
+  h1 {
+    font-family: Seaweed Script;
+    font-size: 120px;
+    font-weight: 100;
+    margin-bottom: 0px;
+  }
+
   h3 {
     font-family: Seaweed Script;
     font-size: 64px;
