--- a/views/resources/new.ejs
+++ b/views/resources/new.ejs
@@ -5,7 +5,7 @@
 <br><br>
 <form id="new-form" action="/resources" method="POST">
   <label>Organization:</label>
-  <input type="text" name="organnization">
+  <input type="text" name="organization">
   <label>Website:</label>
   <input type="text" name="website">
   <label>Practioner (Please separate with commas):</label>
