--- a/views/resources/show.ejs
+++ b/views/resources/show.ejs
@@ -1,24 +1,11 @@
 <%- include('../partials/header') %>
-<h3>Resource Guide</h3>
-<section id="show-page">
-  <div>Organization: </div>
-  <div><%= resource.organization %></div>
-  <div>Website: </div>
-  <div><%= resource.website %></div>
-  <div>Practioner: </div>
-  <div><%= resource.practioner.join (', ') %></div>
-  <div>Available Through Telehealth: </div>
-  <div><%= resource.telehealth ? 'Yes' : 'No' %></div>
-</section>
 
-<a href="/resources/new">Are We Missing Something? Let Us Know!</a>
-  
+<header>
+  <h3>Meet Aidan...</h3>
+</header>
+  <p class = text></p>
+  <section>
+    <img src="/images/aidan.jpg" alt="Aidan" class="about"><br><br>
+  </section>
+
 <%- include('../partials/footer') %>
-
-
-
-
-
-
-
-
