--- a/views/resources/index.ejs
+++ b/views/resources/index.ejs
@@ -1,7 +1,8 @@
 <%- include('../partials/header') %>
 
 <img src = "/images/home.png" alt="superhero kids">
-<h1>Resource Guide</h1>
+<h3>Browse through our list of providers</h3>
+<br><br>
 <table id="list">
   <thead>
     <tr>
@@ -23,6 +24,6 @@
     </tbody>
   </table>
 <br><br><br>
-  <h3><a href="/resources/new">Are We Missing Something? Let Us Know!</a></h3>
+<h2>Are We Missing Something?</h2><h2><a href="/resources/new"> Let Us Know!</a></h2>
   
 <%- include('../partials/footer') %>
