--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,19 @@
 * {
     box-sizing: border-box;
     font-family: Roboto;
-    color: #424748;
+    color: #000000;
   }
 
   h1 {
     font-family: Seaweed Script;
     font-size: 120px;
+    font-weight: 100;
+    margin-bottom: 0px;
+  }
+
+  h2 {
+    font-family: Seaweed Script;
+    font-size: 24px;
     font-weight: 100;
     margin-bottom: 0px;
   }
@@ -40,7 +47,6 @@
   nav > img {
     width: 100px;
     object-fit: contain;
-    margin-right: auto;
   }
   
   body > main {
@@ -48,7 +54,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(236, 232, 236);
+    background-color: rgb(243, 227, 252);
     padding: 20px;
     overflow-y: scroll;
   }
@@ -89,8 +95,8 @@
   }
   
   nav > a:hover {
-    color: white;
-    background-color: #424748;
+    color: purple;
+    background-color:whitesmoke;
   }
   
   nav > a.active {
@@ -158,11 +164,11 @@
    #add-review-form {
      display: grid;
      grid-template-columns: auto auto;
-     grid-gap: 1rem;
+     grid-gap: 2rem;
    }
   
    #add-review-form input[type="submit"] {
-     width: 8rem;
+     width: 10rem;
      grid-column: 2 / 3;
      margin-bottom: 2rem;
    }
