--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,14 +161,23 @@
     font-weight: bold;
   }
   
-   #add-review-form {
+   #add-review-form,
+   #add-practitioner-form {
      display: grid;
      grid-template-columns: auto auto;
      grid-gap: 2rem;
    }
   
+   #add-practitioner-form input[type="submit"],
    #add-review-form input[type="submit"] {
      width: 10rem;
      grid-column: 2 / 3;
      margin-bottom: 2rem;
    }
+
+  #new-form *,
+  #add-review-form *,
+  #add-performer-form * {
+    font-size: 20px;
+  }
+
