--- a/views/clients/index.ejs
+++ b/views/clients/index.ejs
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
+<%- include('../partials/header') %>
 
 <head>
-  <title>Autism Resouce Guide</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Seaweed+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+  <title>Activities</title>
   <!-- Materialize Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Materialize CSS Framework -->
@@ -16,60 +12,38 @@
 </head>
 
 <body>
-  <div class="navbar-fixed">
-    <nav>
-      <div class="nav-wrapper purple">
-        <a href="" class="brand-logo left">MANA</a>
-        <ul class="right">
-          <li><a href="/">Home</a></li>
-          <!-- Place Login UI Here -->
-          <li>
-          <% if (user) { %>
-            <a href="/logout"><i class="material-icons left">trending_flat</i>Log Out</a>
-          <% } else { %>
-            <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
-          <% } %>
-        </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <header class="container">
-
-  </header>
   <main class="container">
     <div class="row">
       <div id="clients" class="col s12">
-        <% users.forEach(function(client) { %>
-          <div class="card purple">
+        <% clients.forEach(function(activity) { %>
+          <div class="card blue">
             <div class="card-content white-text">
               <div>
                 <span class="card-title">
-                  <% if (user.avatarURL) { %>
-                    <img src="<% user.avatarURL %>" width="20" height="20" alt="Avatar"/>
+                  <% if (client.avatarURL) { %>
+                    <img src="<% client.avatarURL %>" width="20" height="20" alt="Client Photo"/>
                   <% } else { %>
                     <i class="small material-icons">perm_idenity</i>
                   <% } %>
-                  <span class="client-name"><%= user.name %></span>
-                  <% if (client.cohort) { %><span class="badge white">SEI <%= client.cohort %></span><% } %>
+                  <span class="client-name"><%= client.name %></span>
+                  <% if (client.group) { %><span class="badge white">Parents <%= client.group %></span><% } %>
                 </span>
               </div>
               <ul class="collection">
-                <% client.facts.forEach(function(fact, index) { %>
+                <% client.activities.forEach(function(activity, index) { %>
                   <li class="collection-item blue-grey-text text-darken-2"><%= fact.text %></li>
-                  <% if (user._id.equals(user && user._id)) { %>
-                    <form action="/facts/<%= fact._id%>?_method=DELETE" method ="POST">
-                      <button type="submit" class="btn white-text">Delete This Fact!</button>
+                  <% if (client._id.equals(user && user._id)) { %>
+                    <form action="/activities/<%= fact._id%>?_method=DELETE" method ="POST">
+                      <button type="submit" class="btn white-text">Delete This Activity!</button>
                       <% } %>
                       <% }) %>
               </ul>
-              <!-- Place Add Fact UI Here -->
               <li>
-              <% if (user._id.equals(user && user._id)) { %>
+              <% if (client._id.equals(user && user._id)) { %>
               <div class="card-action">
-                <form action="/facts" method="POST">
+                <form action="/activities" method="POST">
                 <input type="text" name="text" class="white-text">
-                <button type ="submit" class="btn white-text">Add Fact!</button>
+                <button type ="submit" class="btn white-text">Add Activity!</button>
                 </form>
               </div>
             <% } %>
