updates page functionalities

--- a/views/clients/index.ejs
+++ b/views/clients/index.ejs
@@ -1,7 +1,5 @@
 <%- include('../partials/header') %>
-
 <head>
-  <title>Activities</title>
   <!-- Materialize Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Materialize CSS Framework -->
@@ -12,6 +10,26 @@
 </head>
 
 <body>
+  <div class="navbar-fixed">
+    <nav>
+      <div class="nav-wrapper white">
+        <a href="" class="brand-logo left">Events</a>
+        <ul class="right">
+          <li><a href="/resources">Home</a></li>
+          <li>
+          <% if (user) { %>
+            <a href="/logout"><i class="material-icons left">trending_flat</i>Log Out</a>
+          <% } else { %>
+            <a href="/auth/google"><i class="material-icons left">vpn_key</i>Login with Google</a>
+          <% } %>
+        </li>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <header class="container">
+
+  </header>
   <main class="container">
     <div class="row">
       <div id="clients" class="col s12">
@@ -53,6 +71,5 @@
         <% }) %>
       </div>
     </div>
-  </main>
-</body>
-</html>
+
+<%- include('../partials/footer') %>
