--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,12 +12,12 @@
 </head>
 <body>
   <nav>
-    <a href="/resources/info"<%- name === 'About' ? 'class="active"' : '' %>>About</a>
+    <a href="/info"<%- name === 'About' ? 'class="active"' : '' %>>About</a>
     <a href="/resources" <%- name === 'Find Resources' ? 'class="active"' : '' %>>Find A Resource</a>
     <a href="/resources/new" <%- name === 'Suggest A Resource' ? 'class="active"' : '' %>>Suggest A Resource</a> 
     <a href="/clients" <%- name === 'Add Activity' ? 'class="active"' : '' %>>Add Activity</a>
     <a href="/resources"><img alt="Mana" src="/images/mana.png" width="100"></a>  
-    <a href="/resouces">See All Resources</a>
+    
   </nav>
   <main>
     
