adds route to clients

--- a/views/clients/index.ejs
+++ b/views/clients/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header') %>
+<html>
 <head>
   <!-- Materialize Icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,8 +12,8 @@
 <body>
   <div class="navbar-fixed">
     <nav>
-      <div class="nav-wrapper white">
-        <a href="" class="brand-logo left">Events</a>
+      <div class="nav-wrapper blue">
+        <a href="" class="brand-logo left">MANA</a>
         <ul class="right">
           <li><a href="/resources">Home</a></li>
           <li>
@@ -72,4 +72,4 @@
       </div>
     </div>
 
-<%- include('../partials/footer') %>
+</html>
