--- a/views/resources/index.ejs
+++ b/views/resources/index.ejs
@@ -25,5 +25,6 @@
   </table>
 <br><br><br>
 <h2>Are We Missing Something?</h2><h2><a href="/resources/new"> Let Us Know!</a></h2>
+<a href="/clients" <%- name === 'Add Activity' ? 'class="active"' : '' %>>Add Activity</a>
   
 <%- include('../partials/footer') %>
