--- a/views/resources/info.ejs
+++ b/views/resources/info.ejs
@@ -7,5 +7,6 @@
   <section>
     <img src="/images/aidan.jpg" alt="Aidan" class="about"><br><br>
   </section>
+  <p>Aidan came out into this world with no complications, through normal birth delivery, not a single thing at birth indicated that he would be considered "different" from other kids.  He was reaching all but one milestone according to age.  At age 1, he wasn't starting to form any words but raising him in a trilingual household, we thought that it's perfectly normal.  His dad would talk to him in French, I would talk to him in Tagalog and   </p>
 
 <%- include('../partials/footer') %>
