--- a/views/resources/new.ejs
+++ b/views/resources/new.ejs
@@ -10,6 +10,16 @@
   <input type="text" name="website">
   <label>Practioner (Please separate with commas):</label>
   <input type="text" name="practioner">
+  <label>Type of Therapy Offered</label>
+  <select name="service">
+    <option value="ST">Speech Therapy</option>
+    <option value="OT">Occupational Therapy</option>
+    <option value="PT">Physical Therapy</option>
+    <option value="ABA">ABA</option>
+    <option value="Behavioral">Other Types of Behavioral Therapy</option>
+  </select>
+  <label>If you chose "other", please indicate type of therapy</label>
+  <input type="text" name="other">
   <label>Available Through Telehealth:</label>
   <input type="checkbox" name="telehealth" checked>
   <input type="submit" value="SUBMIT">
