--- a/views/resources/show.ejs
+++ b/views/resources/show.ejs
@@ -8,6 +8,8 @@
   <div><%= resource.website %></div>
   <div>Practioner: </div>
   <div><%= resource.practioner.join (', ') %></div>
+  <div>Type of Service: </div>
+  <div><%= resource.service %></div>
   <div>Available Through Telehealth: </div>
   <div><%= resource.telehealth ? 'Yes' : 'No' %></div>
 </section>
