--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,11 +37,12 @@
   
   body > nav {
     grid-area: nav;
-    background-color:whitesmoke;
+    background-color: #e1bee7;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 0 20px 0 30px;
+    padding: 10px 20px 10px 30px;
+   
   }
   
   nav > img {
@@ -181,3 +182,4 @@
     font-size: 20px;
   }
 
+  
